Add link to PurgeCSS options reference (#520)

--- a/src/pages/docs/controlling-file-size.mdx
+++ b/src/pages/docs/controlling-file-size.mdx
@@ -185,6 +185,8 @@ module.exports = {
 }
 ```
 
+A list of available options can be found in the [PurgeCSS documentation](https://purgecss.com/configuration.html#options).
+
 ## Setting up PurgeCSS manually
 
 Under the hood, Tailwind's `purge` feature is powered by a fantastic library called [PurgeCSS](https://purgecss.com/).
