Add class table for cursor docs

--- a/src/pages/docs/cursor.mdx
+++ b/src/pages/docs/cursor.mdx
@@ -12,6 +12,8 @@ import plugin from 'tailwindcss/lib/plugins/cursor'
 import { Variants } from '@/components/Variants'
 import { Disabling } from '@/components/Disabling'
 
+export const classes = { plugin }
+
 ## Auto
 
 Use `.cursor-auto` to allow the browser to change the cursor based on the current content (e.g. automatically change to `text` cursor when hovering over text).
