fix: mention place-items-end in the correct location (#533)
Co-authored-by: Hendrik Mittrop <hendrik.mittrop@zalando.de>

--- a/src/pages/docs/place-items.mdx
+++ b/src/pages/docs/place-items.mdx
@@ -47,7 +47,7 @@ Use `place-items-start` to place grid items on the start of their grid areas on 
 
 ## End
 
-Use `place-items-start` to place grid items on the end of their grid areas on both axis:
+Use `place-items-end` to place grid items on the end of their grid areas on both axis:
 
 ```html
 <template preview>
