--- a/src/pages/resources.mdx
+++ b/src/pages/resources.mdx
@@ -10,6 +10,8 @@ We think Tailwind is an amazing CSS framework, but you need more than just a CSS
 
 Here are some resources that can help you take your Tailwind projects to the next level.
 
+For Tailwind CSS brand assets and usage guidelines, please visit our [Brand page](/brand).
+
 ---
 
 ## Learning design
