--- a/src/pages/docs/adding-base-styles.mdx
+++ b/src/pages/docs/adding-base-styles.mdx
@@ -46,7 +46,7 @@ If you want to apply some base styles to specific elements, the easiest way is t
 }
 ```
 
-By using the `@layer` directive, Tailwind will automatically move those styles to the same place as `@tailwind base` to avoid unintended specificity issues..
+By using the `@layer` directive, Tailwind will automatically move those styles to the same place as `@tailwind base` to avoid unintended specificity issues.
 
 Using the `@layer` directive will also instruct Tailwind to consider those styles for purging when purging the `base` layer. Read our [Controlling File Size](/docs/controlling-file-size) documentation for more details.
 
