Fix spelling in Place Items docs (#539)

--- a/src/pages/docs/place-items.mdx
+++ b/src/pages/docs/place-items.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Place Items"
-description: "Utilities for controlling how items are justifed and aligned at the same time."
+description: "Utilities for controlling how items are justified and aligned at the same time."
 featureVersion: "v1.8.0+"
 ---
 
