Make minor grammar tweaks to docs (#538)
* Update overflow.mdx
Minor grammar tweak.
* Fix typo in place-self docs
* Update space.mdx

--- a/src/pages/docs/overflow.mdx
+++ b/src/pages/docs/overflow.mdx
@@ -33,7 +33,7 @@ Use `.overflow-visible` to prevent content within an element from being clipped.
 
 ## Auto
 
-Use `.overflow-auto` to add scrollbars to an element in the event that its content overflows the bounds of that element. Unlike `.overflow-scroll`, which always show scrollbars, this utility will only show them if scrolling is necessary.
+Use `.overflow-auto` to add scrollbars to an element in the event that its content overflows the bounds of that element. Unlike `.overflow-scroll`, which always shows scrollbars, this utility will only show them if scrolling is necessary.
 
 ```html
 <template preview>
