--- a/src/pages/docs/place-self.mdx
+++ b/src/pages/docs/place-self.mdx
@@ -81,7 +81,7 @@ Use `place-self-end` to align an item to the end on both axes:
 
 ## Stretch
 
-Use `place-self-stretch` to stretch an item on both axis:
+Use `place-self-stretch` to stretch an item on both axes:
 
 ```html
 <template preview>
