--- a/src/pages/docs/space.mdx
+++ b/src/pages/docs/space.mdx
@@ -50,7 +50,7 @@ Control the horizontal space between elements using the `space-x-{amount}` utili
 
 ## Add vertical space between children
 
-Control the horizontal space between elements using the `space-y-{amount}` utilities.
+Control the vertical space between elements using the `space-y-{amount}` utilities.
 
 ```html
 <template preview>
