Remove reference to Firefox Send (#542)

--- a/src/pages/docs/installation.mdx
+++ b/src/pages/docs/installation.mdx
@@ -321,4 +321,4 @@ To pull in Tailwind for quick demos or just giving the framework a spin, grab th
   Note that while the CDN build is large <em>({stats.default.brotlified} compressed, {stats.default.minified} raw)</em>, <strong>it's not representative of the sizes you see when including Tailwind as part of your build process</strong>.
 </p>
 
-Sites that follow our [best practices](/docs/controlling-file-size) are almost always under 10kb compressed. For example, [Firefox Send](https://send.firefox.com/) is built with Tailwind and their CSS is under 4kb compressed and minified.
+Sites that follow our [best practices](/docs/controlling-file-size) are almost always under 10kb compressed.
