updated focus-visible note to mention chrome support (#541)

--- a/src/pages/docs/pseudo-class-variants.mdx
+++ b/src/pages/docs/pseudo-class-variants.mdx
@@ -254,7 +254,7 @@ Add the `focus-visible:` prefix to only apply a utility when an element has focu
 </ul>
 ```
 
-Note that only Firefox supports `focus-visible` natively, so for sufficient browser support you should install and configure both the [focus-visible JS polyfill](https://github.com/WICG/focus-visible) and the [focus-visible PostCSS polyfill](https://github.com/csstools/postcss-focus-visible). Make sure to include the PostCSS plugin _after_ Tailwind in your list of PostCSS plugins:
+Note that currently only [Firefox and Chrome](https://caniuse.com/?search=focus-visible) support `focus-visible` natively, so for sufficient browser support you should install and configure both the [focus-visible JS polyfill](https://github.com/WICG/focus-visible) and the [focus-visible PostCSS polyfill](https://github.com/csstools/postcss-focus-visible). Make sure to include the PostCSS plugin _after_ Tailwind in your list of PostCSS plugins:
 
 ```js
 // postcss.config.js
