Add tailwindcss init -p documentation (#512)
* Add tailwindcss init -p documentation
- Use heading + badge with Tailwind version

Co-authored-by: Simon Vrachliotis <simon@simonswiss.com>

--- a/src/pages/docs/installation.mdx
+++ b/src/pages/docs/installation.mdx
@@ -87,6 +87,13 @@ module.exports = {
 }
 ```
 
+#### <Heading badge="v1.7.4+">Generating a basic PostCSS config file</Heading>
+
+You can also generate a basic `postcss.config.js` file for your project using the Tailwind CLI utility:
+```bash
+npx tailwindcss init -p
+```
+
 We've included more specific instructions for a few popular tools below, but for instructions on getting started with PostCSS in general, see the [PostCSS documentation](https://github.com/postcss/postcss#usage).
 
 ### Using Tailwind CLI
