--- a/src/pages/docs/installation.mdx
+++ b/src/pages/docs/installation.mdx
@@ -57,6 +57,7 @@ This will create a minimal `tailwind.config.js` file at the root of your project
 ```js
 // tailwind.config.js
 module.exports = {
+  future: {},
   purge: [],
   theme: {
     extend: {},
