Document new upcoming changes

--- a/src/pages/docs/upcoming-changes.mdx
+++ b/src/pages/docs/upcoming-changes.mdx
@@ -64,3 +64,63 @@ module.exports = {
   // ...
 }
 ```
+
+## Default line heights for font size utilities
+
+In Tailwind v2.0, all font-size utilities like `text-sm` and `text-lg` will also include their own default line-height value specific to that font size.
+
+Here's a list of the included font-size utilities with their corresponding default line-heights:
+
+```js
+// Default config for 2.0
+
+module.exports = {
+  // ...
+  theme: {
+    fontSize: {
+      xs: ['0.75rem', { lineHeight: '1rem' }],
+      sm: ['0.875rem', { lineHeight: '1.25rem' }],
+      base: ['1rem', { lineHeight: '1.5rem' }],
+      lg: ['1.125rem', { lineHeight: '1.75rem' }],
+      xl: ['1.25rem', { lineHeight: '1.75rem' }],
+      '2xl': ['1.5rem', { lineHeight: '2rem' }],
+      '3xl': ['1.875rem', { lineHeight: '2.25rem' }],
+      '4xl': ['2.25rem', { lineHeight: '2.5rem' }],
+      '5xl': ['3rem', { lineHeight: '1' }],
+      '6xl': ['4rem', { lineHeight: '1' }],
+    },
+  },
+}
+```
+
+This is a breaking change because you might be using a utility like `text-2xl` in your project right now without adding an explicit line-height like `leading-8`, which means you are implicitly relying on the current default of `1.5` and the new defaults will change how your project looks.
+
+The easiest way to update your project for 2.0 is to look through your project for any places where you are using a font-size utility without adding a line-height utility and explicitly add `leading-normal`, so that when you upgrade to 2.0 the new line-height defaults won't impact your design.
+
+To opt-in to this change now and ease the transition to 2.0, use the `defaultLineHeights` flag:
+
+```js
+// tailwind.config.js
+module.exports = {
+  future: {
+    defaultLineHeights: true,
+  },
+  // ...
+}
+```
+
+## Rename font-thin and font-hairline
+
+In Tailwind 2.0, the `font-thin` utility will be renamed to `font-extralight` and `font-hairline` will be renamed to `font-thin` to better match the naming in the [OpenType specification](https://docs.microsoft.com/en-us/typography/opentype/spec/os2#usweightclass).
+
+To opt-in to this change now and ease the transition to 2.0, use the `standardFontWeights` flag:
+
+```js
+// tailwind.config.js
+module.exports = {
+  future: {
+    standardFontWeights: true,
+  },
+  // ...
+}
+```
