Update border radius and outline documentation

--- a/src/pages/docs/border-radius.mdx
+++ b/src/pages/docs/border-radius.mdx
@@ -17,7 +17,7 @@ export const classes = { plugin }
 
 ## Rounded corners
 
-Use the `.rounded-sm`, `.rounded`, or `.rounded-lg` utilities to apply different border radius sizes to an element.
+Use utilities like `.rounded-sm`, `.rounded`, or `.rounded-lg` to apply different border radius sizes to an element.
 
 ```html
 <template preview class="flex justify-around text-sm p-4">
