Update pseudo-class-variants page title

--- a/src/pages/docs/pseudo-class-variants.mdx
+++ b/src/pages/docs/pseudo-class-variants.mdx
@@ -1,5 +1,5 @@
 ---
-title: Pseudo-Class Variants
+title: Hover, Focus, & Other States
 description: Using utilities to style elements on hover, focus, and more.
 ---
 
